updated word2vec object

--- a/train_biased_word2vec.ipynb
+++ b/train_biased_word2vec.ipynb
@@ -151,8 +151,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "260feab6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<gensim.models.keyedvectors.KeyedVectors at 0x7f8c5de54e50>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model._model.wv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a8b1bb74",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.48433578,  0.57497567,  0.04695257, ...,  0.4946497 ,\n",
+       "        -0.122315  ,  0.19138941],\n",
+       "       [-0.43736538,  0.4967723 ,  0.0732721 , ...,  0.5870339 ,\n",
+       "        -0.27158174,  0.15152335],\n",
+       "       [-0.37846416,  0.5832104 ,  0.09564562, ...,  0.3046734 ,\n",
+       "        -0.0876689 ,  0.15165192],\n",
+       "       ...,\n",
+       "       [-0.3002231 ,  0.51210827,  0.13794549, ...,  0.6174123 ,\n",
+       "        -0.09003033,  0.06505954],\n",
+       "       [-0.32000846,  0.5509188 ,  0.0694846 , ...,  0.2596142 ,\n",
+       "        -0.01543481,  0.1341716 ],\n",
+       "       [-0.2690164 ,  0.3698167 ,  0.1469827 , ...,  0.2738705 ,\n",
+       "        -0.12756617,  0.04883603]], dtype=float32)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model._model.syn1neg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c20474ab",
    "metadata": {},
    "outputs": [],
    "source": []
