faster word2vec sampler

--- a/notebooks/2022_07_2-train-biased-word2vec/train.ipynb
+++ b/notebooks/2022_07_2-train-biased-word2vec/train.ipynb
@@ -44,7 +44,8 @@
     "import gensim \n",
     "import pickle\n",
     "from tqdm.auto import  tqdm\n",
-    "\n",
+    "import faiss \n",
+    "from numba import njit\n",
     "\n",
     "import sys\n",
     "sys.path.insert(0, \"../../\")\n",
@@ -143,28 +144,147 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will construct a dataset for triplet contrastive learning. Our dataset consists of two samplers, one for anchor-positive example pairs, and the other for anchor-negative example pairs.\n",
+    "First, let us define the sampler for anchor-positive pairs. We will use nGramSampler, which samples the pairs from a given word sequence. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# nGramSampler samples pairs of center and context word from \n",
-    "# a given sequence of words\n",
     "pos_sampler = gravlearn.nGramSampler(\n",
     "    window_length=10, context_window_type=\"double\", buffer_size=1000,\n",
-    ")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we will define a sampler for anchor-negative pairs based on a soft-max function \n",
     "\n",
-    "# Word2VecSampler will produce the negative context j' given a center word i based on a soft-max function \n",
-    "# \n",
-    "# P(j'|i) = exp(alpha u_i ^\\top v_j') / Z\n",
+    "$$P(j'|i) = \\exp(u_i ^\\top v_j') / Z$$\n",
+    "\n",
+    "\n",
+    "where u_i and v_j are the in-vector and out-vector representing center word i and context word j', respectively. \n",
+    "However, evaluating the probability is computationally expensive due to the normalization constant Z that extends over all nodes in the dataset. \n",
+    "\n",
+    "To reduce the burden, I'll use an alternative based on the two-stage sampling as follows. \n",
+    "1. First, I find the top $m=500$ words with the largest $\\exp(u_i ^\\top v_j')$ for each center word $i$. \n",
+    "2. With probability $\\alpha$, we draw context $j'$ from the $m=500$ closest words with probability proportional to $\\exp(u_i ^\\top v_j')$. \n",
+    "3. Otherwise, we draw j' from all nodes with probability proportional to the frequency. \n",
+    "\n",
+    "Here, alpha is a hyper-parameter that controls the balance between contextual and non-contextual sampling. I set $\\alpha=0.9$ for this experiment.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Word2VecSampler(gravlearn.DataSampler):\n",
+    "    def __init__(self, in_vec, out_vec, alpha=0.9, m = 500, gpu_id = None):\n",
+    "        self.alpha = alpha\n",
+    "        self.in_vec = in_vec.astype(\"float32\")\n",
+    "        self.out_vec = out_vec.astype(\"float32\")\n",
+    "        self.center_sampler = gravlearn.FrequencyBasedSampler()\n",
+    "        self.n_elements, self.dim = out_vec.shape[0], self.out_vec.shape[1]\n",
+    "        \n",
+    "        #\n",
+    "        # Find the m words with the largest probability mass\n",
+    "        #\n",
+    "\n",
+    "        # Make faiss index\n",
+    "        n_train_sample = np.minimum(100000, self.n_elements)\n",
+    "        nlist = int(np.ceil(np.sqrt(n_train_sample)))\n",
+    "        faiss_index = faiss.IndexIVFFlat(faiss.IndexFlatIP(self.dim), self.dim, nlist, faiss.METRIC_INNER_PRODUCT)\n",
+    "\n",
+    "        if gpu_id is not None:\n",
+    "            res = faiss.StandardGpuResources()\n",
+    "            faiss_index = faiss.index_cpu_to_gpu(res, gpu_id, faiss_index)\n",
+    "        faiss_index.train(self.out_vec[np.random.choice(self.n_elements, n_train_sample, replace=False)])\n",
+    "\n",
+    "        # Add the embedding vectors to index \n",
+    "        faiss_index.add(self.out_vec)\n",
+    "\n",
+    "        # Construct a graph of words with edges running between a center word $i$ and the m nodes with the largest $\\exp(u_i ^\\top v_j)$.  \n",
+    "        dist, indices = faiss_index.search(self.in_vec, m)\n",
+    "        rows = np.arange(self.n_elements).reshape((-1, 1)) @ np.ones((1, m))\n",
+    "        rows, indices, dist = rows.ravel(), indices.ravel(), dist.ravel()\n",
+    "        s = indices >= 0\n",
+    "        rows, indices, dist = rows[s], indices[s], dist[s]\n",
+    "        dist = np.exp(dist)\n",
+    "        A = sparse.csr_matrix(\n",
+    "            (dist, (rows, indices)),\n",
+    "            shape=(self.n_elements, self.n_elements),\n",
+    "        )\n",
+    "\n",
+    "        # Preprocess the graph for faster sampling \n",
+    "        data = A.data / A.sum(axis=1).A1.repeat(np.diff(A.indptr))\n",
+    "        A.data = _csr_row_cumsum(A.indptr, data)\n",
+    "\n",
+    "        self.A = A\n",
+    "\n",
+    "    def fit(self, seqs):\n",
+    "        self.center_sampler.fit(seqs)\n",
+    "\n",
+    "    def conditional_sampling(self, conditioned_on=None):\n",
+    "        if np.random.rand() < self.alpha:\n",
+    "            return _sample_one_neighbor(conditioned_on, self.A.indptr, self.A.indices, self.A.data)\n",
+    "        else:\n",
+    "            return self.center_sampler.sampling()[0]\n",
+    "\n",
+    "    def sampling(self):\n",
+    "        cent = self.center_sampler.sampling()[0]\n",
+    "        cont = self.conditional_sampling(cent)\n",
+    "        return cent, cont\n",
+    "\n",
     "#\n",
-    "# where u_i and v_j are the in-vector and out-vector representing center word i and context word j', respectively. \n",
-    "neg_sampler = gravlearn.Word2VecSampler(in_vec=in_vec, out_vec=out_vec, alpha=1)\n",
+    "# Helper functions\n",
+    "#\n",
+    "@njit(nogil=True)\n",
+    "def _csr_row_cumsum(indptr, data):\n",
+    "    out = np.empty_like(data)\n",
+    "    for i in range(len(indptr) - 1):\n",
+    "        acc = 0\n",
+    "        for j in range(indptr[i], indptr[i + 1]):\n",
+    "            acc += data[j]\n",
+    "            out[j] = acc\n",
+    "        out[j] = 1.0\n",
+    "    return out\n",
     "\n",
+    "@njit(nogil=True)\n",
+    "def _sample_one_neighbor(node_id, indptr, indices, data):\n",
+    "    neighbors = indices[indptr[node_id]:indptr[node_id + 1]]\n",
+    "    neighbors_weight = data[indptr[node_id]:indptr[node_id + 1]]\n",
+    "    return neighbors[\n",
+    "        np.searchsorted(neighbors_weight, np.random.rand())\n",
+    "    ]\n",
     "\n",
-    "# Fit the samplers\n",
-    "pos_sampler.fit(indexed_documents)\n",
+    "neg_sampler = Word2VecSampler(in_vec=in_vec, out_vec=out_vec, alpha=0.9, m = 500)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Train the samplers and bundle them as a dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "neg_sampler.fit(indexed_documents)\n",
+    "pos_sampler.fit(indexed_documents)\n",
     "\n",
     "# Bundle them as a dataset\n",
     "dataset = gravlearn.TripletDataset(\n",
@@ -235,7 +355,7 @@
     "     dataset,\n",
     "     batch_size=batch_size,\n",
     "     shuffle=False,\n",
-    "     num_workers=16,\n",
+    "     num_workers=4,\n",
     "     pin_memory=True,\n",
     ")"
    ]
@@ -251,16 +371,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Set up the loss function\n",
     "loss_func = gravlearn.TripletLoss(embedding=model, dist_metric=dist_metric)\n",
