save keyed vector

--- a/notebooks/2022_07_2-train-biased-word2vec/train.ipynb
+++ b/notebooks/2022_07_2-train-biased-word2vec/train.ipynb
@@ -72,7 +72,8 @@
     "dataset_file = data_dir / \"raw/simplewiki/simplewiki-20171103-pages-articles-multistream.xml.bz2\"\n",
     "\n",
     "# Output\n",
-    "output_file = \"fairness-aware-word2vec.pth\""
+    "output_file = data_dir / \"derived/simplewiki/models/fairness-aware-word2vec/fairness-aware-word2vec_dim~25.pth\"\n",
+    "output_kv_file = data_dir / \"derived/simplewiki/models/fairness-aware-word2vec/fairness-aware-word2vec-keyedvector_dim~25.pth\""
    ]
   },
   {
@@ -420,6 +421,25 @@
     "    if (it + 1) % checkpoint == 0:\n",
     "        if output_file is not None:\n",
     "            torch.save(model.state_dict(), output_file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save as the keyed vector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "in_vec = model.ivectors.weight.detach().cpu().numpy()\n",
+    "kv = gensim.models.KeyedVectors(in_vec.shape[1])\n",
+    "kv.add_vectors(biased_model.wv.index_to_key, in_vec)\n",
+    "kv.save(\"fairness-word2vec-keyedvector.kv\")"
    ]
   }
  ],
