need to create a pre master branch and then start training

--- a/notebooks/analysis/compare_models.ipynb
+++ b/notebooks/analysis/compare_models.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fff05fa1",
+   "id": "c5257414",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a7af621d",
+   "id": "4864d22e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "013ce25c",
+   "id": "c2b131d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "bfaa3e0e",
+   "id": "054a03a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c6c00168",
+   "id": "128c0ddd",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8ac38c59",
+   "id": "19c66650",
    "metadata": {},
    "outputs": [
     {
@@ -89,34 +89,17 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "11925ec3",
+   "id": "830ea66b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.36986372,\n",
-       " 0.93335587,\n",
-       " 0.88617885,\n",
-       " 1.9091392,\n",
-       " 1.3854921,\n",
-       " 1.3058485,\n",
-       " 1.7034103]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "WEAT(model_original_data, words_json=WORDS_JSON).get_scores()"
+    "# WEAT(model_original_data, words_json=WORDS_JSON).get_scores()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3b3ce02a",
+   "id": "0dca54ca",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ad6de623",
+   "id": "9606384a",
    "metadata": {},
    "outputs": [
     {
